library-button moves 30rem to the righ with library opent, at low res screens, it goes offscreen. Best solution would be to get rid of positon: absolute for the library and solve the layout with flexbox, but here is a more quick fix, the library title is also a button. Fixed some spelling mistakes, used a sass variable for moving the app. also updated readme to not be default, put gh pages stuff in package.json

--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -1,8 +1,10 @@
+@import "variables";
+
 .library {
     position: fixed;
     top: 0;
     left: 0;
-    width: 20rem;
+    width: $library-width;
     height: 100%;
     flex-direction: column;
     display: flex;
